chore(deps): Update dependencies
- Update NPM modules.
- Remove commons-io.
- Update the required JRE to 11.